server/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loss-tracker-server
  namespace: losstracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loss-tracker-server
  template:
    metadata:
      labels:
        app: loss-tracker-server
    spec:
      containers:
      - name: loss-tracker-server
        image: symlon/loss-tracker:latest
        imagePullPolicy: Always
        ports: 
        - containerPort: 5005
      imagePullSecrets:
        - name: regcred
