server/production/load-balancer-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-server
  namespace: losstracker
  labels:
    app: loss-tracker-server
spec:
  selector:
    app: loss-tracker-server
  ports: 
  - name: http
    port: 5005
    targetPort: 5005
    protocol: TCP 
  - name: socket
    port: 3005
    targetPort: 3005
    protocol: TCP
