server/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/websocket-services: "load-balancer-server"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $forwarded_client_ip "";
      if ($http_x_forwarded_for ~ "^([^,]+)") {
        set $forwarded_client_ip $1;
      }
      set $client_ip $remote_addr;
      if ($forwarded_client_ip != "") {
        set $client_ip $forwarded_client_ip;
      }
    nginx.ingress.kubernetes.io/upstream-hash-by: "$client_ip"
spec:
  rules:
  - host: tracker.com
    http:
      paths:
      - path: /socket
        pathType: Prefix
        backend:
          service:
            name: load-balancer-server
            port:
              number: 3005
  - host: ""
    http:
      paths:
      - path: /socket
        pathType: Prefix
        backend:
          service:
            name: load-balancer-server
            port:
              number: 3005

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: tracker.com
    http:
      paths:
      - path: /api/(.*)$
        pathType: Prefix
        backend:
          service:
            name: load-balancer-server
            port:
              number: 5005
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: loss-tracker-nginx-client
            port:
              number: 80
  - host: ""
    http:
      paths:
      - path: /api/(.*)$
        pathType: Prefix
        backend:
          service:
            name: load-balancer-server
            port:
              number: 5005
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: loss-tracker-nginx-client
            port:
              number: 80
