server/production/new_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ing
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # #nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/websocket-services: laod-balancer-server
    # nginx.org/websocket-services: load-balancer-server
    # nginx.ingress.kubernetes.io/proxy-set-header: "X-Forwarded-For $proxy_add_x_forwarded_for"
    # nginx.ingress.kubernetes.io/proxy-set-header: "Host $host"
    # nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    # nginx.ingress.kubernetes.io/proxy-set-header: "Upgrade $http_upgrade"
    # nginx.ingress.kubernetes.io/proxy-set-header: "Connection 'upgrade'"
    # nginx.ingress.kubernetes.io/proxy-redirect: "off"
    nginx.ingress.kubernetes.io/enable-cors: "false"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-buffering: "off"
    # nginx.ingress.kubernetes.io/proxy-protocol: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_set_header Upgrade $http_upgrade;
    #   proxy_set_header Connection "upgrade";
spec:
  rules:
  # - host: tracker.com
  #   http:
  #     paths:
  #     - path: /socket(/|$)(.*)
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: load-balancer-server
  #           port:
  #             number: 3005
  # - host: ""
  #   http:
  #     paths:
  #     - path: /socket(/|$)(.*)
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: load-balancer-server
  #           port:
  #             number: 3005

  - host: tracker.com
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: loss-tracker-nginx-client
            port:
              number: 80
  - host: ""
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: loss-tracker-nginx-client
            port:
              number: 80
