server/production/test-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ing
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: tracker.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loss-tracker-nginx-client
            port:
              number: 80
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loss-tracker-nginx-client
            port:
              number: 80
