server/production/traefik_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: losstracker
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: losstracker-strip-prefix@kubernetescrd
spec:
  rules:
  - host: tracker.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: load-balancer-server
            port:
              number: 5005
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loss-tracker-nginx-client
            port:
              number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: losstracker
spec:
  stripPrefix:
    prefixes:
      - /api
